# 34_pico_synth

./: CMakeLists.txt  LICENSE  README.md  pico-synth-sound.code-workspace
keyboard/: CMakeLists.txt  README.md
keyboard/include/: config.hpp  keyboard_scanner.hpp  midi_protocol.hpp  tusb_config.h  uart_midi.hpp  usb_midi.hpp
keyboard/src/: keyboard_scanner.cpp  main.cpp  uart_midi.cpp  usb_descriptors.c  usb_midi.cpp
ltspice_sim/: PWM_filter.op.raw  PWM_filter.raw
old/ltspice_sim/: PWM_filter.asc  PWM_filter.plt
old/pico-synth-keyboard/: note_index.xlsx
old/pico-synth-panel/: selector.hpp  spi_74hc595.cpp  spi_device.hpp
old/pico-synth-sound/: envelope_generator.cpp  envelope_generator.hpp  filter.cpp  filter.xlsx  fixed_point.hpp  table_freq.xlsx  table_wave.py  voice.hpp
panel/: CMakeLists.txt  README.md  pico-synth-panel.cpp
panel/include/: config.hpp  eg.hpp  lfo.hpp  panel_manager.hpp  selector.hpp  sound_module_manager.hpp  sound_unit.hpp  spi_74hc595.hpp  spi_device.hpp  spi_mcp3008.hpp  types.hpp  vca.hpp  vcf.hpp  vco.hpp  voice_allocator.hpp
panel/src/: eg.cpp  lfo.cpp  main.cpp  panel_manager.cpp  sound_module_manager.cpp  sound_unit.cpp  vca.cpp  vcf.cpp  vco.cpp  voice_allocator.cpp
pico-synth-keyboard/: CMakeLists.txt  note_index.csv  pico-synth-keyboard.c  usb_descriptors.c
pico-synth-panel/: CMakeLists.txt  pico-synth-panel.cpp  selector.hpp  spi_74hc165.cpp  spi_74hc165.hpp  spi_74hc595.cpp  spi_74hc595.hpp  spi_device.cpp  spi_device.hpp  spi_mcp3008.cpp  spi_mcp3008.hpp
pico-synth-sound/: CMakeLists.txt  control_stream_format.xlsx  envelope_generator.cpp  envelope_generator.hpp  filter.cpp  filter.hpp  filter.xlsx  fixed_point.hpp  oscillator.cpp  oscillator.hpp  pico-synth-sound.cpp  table_wave.csv  table_wave.h  table_wave.xlsx  table_wave_auto.h  voice.cpp  voice.hpp
pico-synth-test/: CMakeLists.txt  envelope_generator.cpp  envelope_generator.hpp  filter.hpp  fixed_point.cpp  fixed_point.hpp  oscillator.cpp  oscillator.hpp  pico-synth-test.cpp  table_freq.csv  table_freq.h  table_wave.h  table_wave.xlsx  voice.cpp  voice.hpp
sound/: CMakeLists.txt
sound/include/: config.hpp  filter.hpp  fixed_point.hpp  oscillator.hpp  table_wave_auto.h  voice.hpp
sound/src/: filter.cpp  main.cpp  oscillator.cpp  voice.cpp
